# nork

./: README.md  compile.sh  compile_and_run.sh  configure.sh  meson.build
images/: images.qrc
include/: events.h  inventory.h  item.h  loader.h  location_loader.h  register.h  singleton.tcc
include/database/: database.tcc  indexable.h
include/item/: duck.h  encounter.h  item.h
include/location/: location.h  location_change_pub.h
include/pubsub/: publisher.h  subscriber.h
include/ui/: display.h  duck.h  inventory.h  mainwindow.h  meson.build  minimap.h
locations/: locations.qrc  spec.json
resources/ducks/: ducks.qrc  spec.json
resources/encounters/: encounters.qrc
resources/images/: images.qrc
resources/locations/: spec.json
resources/ui/: Display.qml  Duck.qml  Inventory.qml  LocationIndicator.qml  MiniMap.qml  mainwindow.qml  qml.qrc
src/: events.cc  loader.cc  main.cc  register.cc
src/item/: item.cc  loader.cc
src/location/: change_publisher.cc  loader.cc  location.cc
src/ui/: display.cc  duck.cc  inventory.cc  mainwindow.cc  minimap.cc
ui/: LocationIndicator.qml  Message.qml  MiniMap.qml  mainscreen.qml  mainwindow.qml  qml.qrc
